--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -626,7 +626,7 @@ body.dark-mode {
     width: 32px; 
     height: 32px;
     border-radius: 7px;
-    color: #ffffffe1;   /* adjust needed after change color of 3D-profile card */
+    color: red;   /* adjust needed after change color of 3D-profile card */
 }
 .social-button:first-child {
     transition: transform 0.2s ease-in-out 0.4s, box-shadow 0.2s ease-in-out 0.4s;
