Revert "temp test"
This reverts commit de4b1e51c604186a809748ee053da630645d8eb0.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1248,7 +1248,6 @@ body.dark-mode {
     font-size: 1rem; 
     margin-left: .5rem;
     transition: transform .3s;
-    -webkit-text-fill-color: initial;
 }
 
 .contact__link:hover .bi-feather {
@@ -1267,7 +1266,7 @@ body.dark-mode {
     background: var(--sms-color);
     background-clip: text;
     -webkit-background-clip: text;
-    color: transparent;
+    -webkit-text-fill-color: transparent;
     font-weight: var(--font-medium);
 }
 
